# spec-editor

./: .aider.input.history  .aider_cycle_history.md  .aider_spec_context.md  .dockerignore  .env.example  .gitignore  .opencode_spec_context.md  .pre-commit-hook.sample  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.frontend  Dockerfile.mcp  Makefile  NEW_SESSION_CONTEXT.md  README.md  codegen.yaml  docker-compose.dev.yml  docker-compose.planka.yml  docker-compose.yml  fix_coverage.py  hooks.example.yaml  hooks.yaml  index.html  local.example.yaml  local.yaml  pyproject.toml  readme_mcp.md  requirements.txt  run_codegen.py  skills.yaml  srs_style.j2  srs_template.yaml  test_tools.py  test_traceability.py
.github/workflows/: ci.yml  release.yml  spec-editor.yml
cloud-proxy/: Dockerfile  app.py  docker-compose.yml  requirements.txt
data/: skills.yaml
data/methodologies/: waterfall.yaml
data/prompts/: en.yaml  es.yaml  fr.yaml  ru.yaml
docs/: ARCHITECTURE.md  CONTRIBUTING_PROMPTS.md  EXTENSION_INTEGRATION.md  FAQ.md  QUICKSTART.md  STATUSES.md  ci-template.yml  demo.py  demo.sh  record-demo.sh
examples/bookstore/: README.md  input.md
examples/trace_till_debug/: README.md  skills.yaml
landing/: index.html
methodologies/: waterfall-ru.yaml  waterfall.yaml
prompts/: de.yaml  en.yaml  es.yaml  fr.yaml  ru.yaml
scripts/: install_vscode_extension.py
skills/: coding.yaml  refactor.yaml  spec_editor.yaml
src/: __init__.py  __main__.py  hooks.py  main.py  tracing.py
src/agents/: __init__.py  agent.py  base.py  blind_vote.py  compaction.py  constants.py  dialogue.py  dialogue_manager.py  events.py  factory.py  langgraph_agent.py  orchestrator.py  persistent_agent.py  pm_checks.py  prompts.py  provider.py  questions.py  role.py  spec_agent.py  supervisor_graph.py  task_queue.py  test_utils.py  tools.py  tools_agile.py  tools_code.py  tools_questions.py
src/auth/: __init__.py
src/channels/: __init__.py  chat_channel.py  event_bridge.py  http_helpers.py  log_channel.py  models.py  plugin.py  router.py  tracker_channel.py
src/cli/: commands.py  commands_core.py  commands_coverage.py  commands_edit.py  commands_export.py  commands_export_helpers.py  commands_ingest.py  commands_init.py  commands_license.py  commands_shutdown.py  commands_view.py  display.py
src/code_index/: __init__.py  chunker.py  index.py
src/codegen/: __init__.py  engine.py
src/config/: __init__.py  _data_path.py  engine.py  methodology.py  prompt_loader.py  settings.py  skills.py
src/context/: __init__.py  builder.py
src/events/: __init__.py
src/export/: compliance_exporter.py  formatters.py  gatherers.py  image_analyzer.py  local_diagram.py  openapi_exporter.py  pipeline.py  transports.py  trlc.py
src/implementation/: __init__.py  engine.py
src/ingestion/: __init__.py  analyzer.py  manager.py  preprocessor.py  telegram_hook.py
src/licensing/: __init__.py  cache.py  file_backend.py  gumroad.py  models.py
src/mcp/: __init__.py  annotator.py  exporter.py  metrics.py  server.py  sse.py  tools_project.py  tools_semantic.py  validator.py  verifier.py
src/notifiers/: __init__.py
src/providers/: base.py  litellm_provider.py  ollama_provider.py
src/secrets/: __init__.py
src/storage/: __init__.py  adapter.py  dry_run.py  dry_run_storage.py  filesystem.py  filesystem_storage.py  models.py  parser.py  queries.py  session.py
src/ui/: __init__.py
src/utils/: __init__.py
src/view/: __init__.py  renderer.py
tasks/coding/: usage.json
tasks/project-manager/: usage.json
templates/: android_app.yaml  cli_tool.yaml  docker_compose.yaml  express_api.yaml  fastapi.yaml  go_api.yaml  go_cli.yaml  laravel.yaml  middleware.yaml  nextjs.yaml  nuxt.yaml  react_spa.yaml  rest_service.yaml  rust_api.yaml  rust_cli.yaml  static_site.yaml  symfony.yaml  vanilla_php.yaml  vue_spa.yaml  wordpress.yaml
tests/: manual_api_test.py  test_annotator.py  test_blind_vote.py  test_channel_bridge.py  test_channels.py  test_codegen.py  test_coding_agent_lifecycle.py  test_context.py  test_dry_run_storage.py  test_e2e_frontend.py  test_e2e_mcp.py  test_e2e_vscode.py  test_e2e_vscode_activation.py  test_e2e_vscode_lifecycle.py  test_editor_adapters.py  test_engine.py  test_events.py  test_export.py  test_filesystem_storage.py  test_invest.py  test_language_detection.py  test_licensing.py  test_mcp_server.py  test_methodology.py  test_openapi.py  test_parsers_langs.py  test_prompt_loader.py  test_qa_frontend_e2e.py  test_redis_lifecycle.py  test_regulatory.py  test_scalability.py  test_search_symbol.py  test_session.py  test_smoke.py  test_sse.py  test_status_lifecycle.py  test_traceability.py  test_tracing.py  test_trlc.py  test_view.py
tests/agents/: test_bus.py  test_compaction.py  test_factory.py  test_logger.py  (+6 more)
workflows/: Coding-Agent-Workflow.yaml  Deploy-Workflow.yaml  PM-Agent-Workflow.yaml
(+106 files in other folders)
