[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spec-editor"
version = "0.1.0"
description = "Automated requirements engineering system with AI agents"
readme = "Product/source/readme.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "Spec Editor Team"},
]
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "litellm>=1.50",
    "python-frontmatter>=1.1",
    "click>=8.1",
    "rich>=13.0",
    "structlog>=24.0",
    "pyyaml>=6.0",
    "jinja2>=3.0",
    "tree-sitter>=0.21,<0.25",
    "tree-sitter-languages>=1.9,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "openpyxl>=3.0",
]

[project.scripts]
spec-editor = "src.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]
